# docu-aid

./: .gitignore  README.md  pyproject.toml
src/docu_aid/: app.py  utils.py
vector_index/amazon-sagemaker-toolkits/: default__vector_store.json  docstore.json  index_store.json
vector_index/asff-resourcedetails-awssagemaker/: default__vector_store.json  docstore.json  index_store.json
vector_index/automating-sagemaker-with-eventbridge/: default__vector_store.json  docstore.json  index_store.json
vector_index/aws-properties-events-rule-sagemakerpipelineparame/: default__vector_store.json  docstore.json  index_store.json
vector_index/aws-properties-greengrass-resourcedefinition-sage/: default__vector_store.json  docstore.json  index_store.json
vector_index/aws-properties-greengrass-resourcedefinitionversio/: default__vector_store.json  docstore.json  index_store.json
vector_index/aws-properties-pipes-pipe-pipetargetsagemakerpipel/: default__vector_store.json  docstore.json  index_store.json
vector_index/aws-properties-pipes-pipe-sagemakerpipelineparamet/: default__vector_store.json  docstore.json  index_store.json
vector_index/aws-properties-sagemaker-app-resourcespec/: default__vector_store.json  docstore.json  index_store.json
vector_index/aws-properties-sagemaker-appimageconfig-filesyste/: default__vector_store.json  docstore.json  index_store.json
vector_index/aws-properties-sagemaker-appimageconfig-kernelgate/: default__vector_store.json  docstore.json  index_store.json
vector_index/aws-properties-sagemaker-coderepository-gitconfig/: docstore.json  (+2 more)
(+729 files in other folders)
