[project]
name = "docu-aid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "llama-index-agent-openai>=0.3.0",
    "llama-index-embeddings-huggingface>=0.3.1",
    "llama-index-embeddings-openai>=0.2.3",
    "llama-index-llms-openai>=0.2.0",
    "llama-index>=0.11.3",
    "openai>=1.43.0",
    "ruff>=0.6.3",
    "streamlit>=1.38.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "xformers>=0.0.27.post2",
]
